# py_tictactoe

./: pyproject.toml
src/pytactoe/: board.py  main.py  ticbutton.py
tests/: test_board.py
