[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytactoe"
version = "0.0.1"
authors = [
    { name="joaoLouceiro" }
]
description = "A tic tac toe game for snakes"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/joaoLouceiro/py_tictactoe"
Issues = "https://github.com/joaoLouceiro/py_tictactoe/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[project.scripts]
pytactoe = "pytactoe.main:main"

